<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_day"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="@dimen/_25sp"
        android:layout_marginVertical="@dimen/_20sp"
        android:layout_marginHorizontal="@dimen/_20sp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/etDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_editext"
        android:layout_marginVertical="@dimen/_20sp"
        android:layout_marginHorizontal="@dimen/_20sp"
        android:padding="@dimen/_13sp"
        android:hint="@string/enter_your_day"/>

    <TextView
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="@dimen/_20sp"
        android:textAlignment="center"
        android:layout_marginVertical="@dimen/_20sp"
        android:layout_marginHorizontal="@dimen/_20sp"
        android:background="@drawable/backgroudn_btn"
        android:padding="@dimen/_13sp"/>

</LinearLayout>