<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_exercise"
        android:layout_marginHorizontal="@dimen/_10sp"
        android:layout_marginVertical="@dimen/_10sp"
        android:gravity="center"
        android:textSize="@dimen/_30sp"/>

    <ImageView
<<<<<<< Updated upstream
        android:id="@+id/ivExerciseImageList"
=======
        android:id="@+id/ivExerciseImage"
>>>>>>> Stashed changes
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@mipmap/ic_launcher"/>
    <TextView
        android:id="@+id/btnImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sp"
        android:text="@string/select_image"
        android:layout_gravity="end"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@color/red"
        android:padding="@dimen/_13sp"
        />



    <EditText
        android:id="@+id/etExerciseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sp"
        android:layout_marginVertical="@dimen/_20sp"
        android:hint="@string/exercise_name" />
    <EditText
        android:id="@+id/etExerciseDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_description"
        android:layout_marginHorizontal="@dimen/_10sp"
        android:layout_marginVertical="@dimen/_10sp" />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sp"
        android:id="@+id/spinner"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sp"
        android:id="@+id/weightGainSpinner"/>

    <TextView
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sp"
        android:text="@string/save"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@color/red"
        android:padding="@dimen/_13sp"
        />



</LinearLayout>
    </ScrollView>
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>